[project]
name = "advanced-ds-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.9.2",
    "jaxlib>=0.9.2",
    "numpyro>=0.20.1",
    "pandas>=3.0.2",
    "plotnine>=0.15.3",
    "polars>=1.39.3",
    "pymc>=5.28.4",
]
